--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -657,7 +657,7 @@
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                     </window>
                     <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
+                        <segue destination="TwO-IP-OJ1" kind="relationship" relationship="window.shadowedContentViewController" id="WjN-b4-AAh"/>
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -843,13 +843,152 @@
                     </connections>
                 </arrayController>
                 <userDefaultsController representsSharedInstance="YES" id="k2v-RE-iNo"/>
-                <arrayController mode="entity" entityName="Application" automaticallyPreparesContent="YES" id="8mG-cq-thU" customClass="ApplicationArrayController" customModule="AppstoreReviews" customModuleProvider="target">
-                    <connections>
-                        <binding destination="M7Y-IO-gaN" name="managedObjectContext" keyPath="managedObjectContext" id="sh2-OI-nl3"/>
-                    </connections>
-                </arrayController>
             </objects>
-            <point key="canvasLocation" x="32" y="999"/>
+            <point key="canvasLocation" x="608" y="972"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="pqx-y8-jGT">
+            <objects>
+                <viewController id="TwO-IP-OJ1" customClass="SearchViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="doE-mL-S9g">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <searchField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gzq-LS-VcE">
+                                <rect key="frame" x="0.0" y="578" width="600" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="dVN-uA-lu7"/>
+                                </constraints>
+                                <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="CNu-8T-vNA">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </searchFieldCell>
+                                <connections>
+                                    <outlet property="delegate" destination="TwO-IP-OJ1" id="0Ia-Qy-hlL"/>
+                                </connections>
+                            </searchField>
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="52" horizontalPageScroll="10" verticalLineScroll="52" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLj-2F-pVF">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="578"/>
+                                <clipView key="contentView" id="yqh-tX-qg6">
+                                    <rect key="frame" x="1" y="17" width="238" height="117"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="50" headerView="yLf-IT-DH8" viewBased="YES" id="b8g-nn-vnu">
+                                            <rect key="frame" x="0.0" y="0.0" width="603" height="0.0"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <size key="intercellSpacing" width="3" height="2"/>
+                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                            <tableColumns>
+                                                <tableColumn width="600" minWidth="40" maxWidth="1000" id="ZOh-am-7OF">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                                        <font key="font" metaFont="smallSystem"/>
+                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                    </tableHeaderCell>
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="LyA-qC-FZr">
+                                                        <font key="font" metaFont="system"/>
+                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                    <prototypeCellViews>
+                                                        <tableCellView identifier="applicationCell" id="TtC-WN-tE2" customClass="ApplicationCellView" customModule="AppstoreReviews" customModuleProvider="target">
+                                                            <rect key="frame" x="1" y="1" width="600" height="50"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FiN-Kv-Uuu">
+                                                                    <rect key="frame" x="10" y="10" width="30" height="30"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="30" id="GjV-Ef-VRF"/>
+                                                                        <constraint firstAttribute="height" constant="30" id="gpr-Es-YQV"/>
+                                                                    </constraints>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="2EZ-Oa-RD2"/>
+                                                                </imageView>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wH3-Ck-2xy">
+                                                                    <rect key="frame" x="50" y="20" width="540" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="ds6-XB-trb"/>
+                                                                    </constraints>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Content" id="LnI-lJ-gIV">
+                                                                        <font key="font" metaFont="system"/>
+                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="a9J-mR-Fek">
+                                                                    <rect key="frame" x="50" y="5" width="540" height="15"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="15" id="HW9-3O-5PV"/>
+                                                                    </constraints>
+                                                                    <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="author" id="ksi-kx-zG7">
+                                                                        <font key="font" metaFont="smallSystem"/>
+                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="FiN-Kv-Uuu" firstAttribute="leading" secondItem="TtC-WN-tE2" secondAttribute="leading" constant="10" id="ECw-P2-7t6"/>
+                                                                <constraint firstItem="a9J-mR-Fek" firstAttribute="top" secondItem="wH3-Ck-2xy" secondAttribute="bottom" id="YO5-Od-UOb"/>
+                                                                <constraint firstAttribute="centerY" secondItem="wH3-Ck-2xy" secondAttribute="centerY" constant="5" id="cM1-By-9HI"/>
+                                                                <constraint firstItem="a9J-mR-Fek" firstAttribute="leading" secondItem="FiN-Kv-Uuu" secondAttribute="trailing" constant="12" id="dWH-fn-h5Z"/>
+                                                                <constraint firstItem="wH3-Ck-2xy" firstAttribute="leading" secondItem="FiN-Kv-Uuu" secondAttribute="trailing" constant="12" id="jSP-N0-kX6"/>
+                                                                <constraint firstAttribute="centerY" secondItem="FiN-Kv-Uuu" secondAttribute="centerY" id="p9w-fz-iNe"/>
+                                                                <constraint firstAttribute="trailing" secondItem="wH3-Ck-2xy" secondAttribute="trailing" constant="12" id="rOn-xu-KYk"/>
+                                                                <constraint firstAttribute="trailing" secondItem="a9J-mR-Fek" secondAttribute="trailing" constant="12" id="zPp-Fl-v8I"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="authorTextField" destination="a9J-mR-Fek" id="WfP-3o-4M4"/>
+                                                                <outlet property="imageView" destination="FiN-Kv-Uuu" id="QhQ-im-jk6"/>
+                                                                <outlet property="textField" destination="wH3-Ck-2xy" id="7Z6-sf-UUg"/>
+                                                            </connections>
+                                                        </tableCellView>
+                                                    </prototypeCellViews>
+                                                </tableColumn>
+                                            </tableColumns>
+                                            <connections>
+                                                <outlet property="dataSource" destination="TwO-IP-OJ1" id="G3L-YX-VND"/>
+                                                <outlet property="delegate" destination="TwO-IP-OJ1" id="w0v-w0-uLL"/>
+                                            </connections>
+                                        </tableView>
+                                    </subviews>
+                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="0y1-2G-okJ">
+                                    <rect key="frame" x="1" y="119" width="223" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="bKw-GL-trj">
+                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <tableHeaderView key="headerView" id="yLf-IT-DH8">
+                                    <rect key="frame" x="0.0" y="0.0" width="238" height="17"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableHeaderView>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fLj-2F-pVF" secondAttribute="trailing" id="6B9-w7-0bK"/>
+                            <constraint firstAttribute="bottom" secondItem="fLj-2F-pVF" secondAttribute="bottom" id="BtO-cH-3hl"/>
+                            <constraint firstItem="fLj-2F-pVF" firstAttribute="top" secondItem="gzq-LS-VcE" secondAttribute="bottom" id="JIg-cU-RbF"/>
+                            <constraint firstAttribute="trailing" secondItem="gzq-LS-VcE" secondAttribute="trailing" id="Mpd-Rv-4tN"/>
+                            <constraint firstItem="gzq-LS-VcE" firstAttribute="top" secondItem="doE-mL-S9g" secondAttribute="top" id="fww-a6-nqC"/>
+                            <constraint firstItem="gzq-LS-VcE" firstAttribute="leading" secondItem="doE-mL-S9g" secondAttribute="leading" id="ma4-fw-ccX"/>
+                            <constraint firstItem="fLj-2F-pVF" firstAttribute="leading" secondItem="doE-mL-S9g" secondAttribute="leading" id="oHU-H5-i9p"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="reviewArrayController" destination="M7Y-IO-gaN" id="Ch9-4L-Srp"/>
+                        <outlet property="tableView" destination="b8g-nn-vnu" id="yjQ-9k-ci7"/>
+                    </connections>
+                </viewController>
+                <customObject id="zhy-Uc-EkG" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController id="rbu-Hs-GB0"/>
+            </objects>
+            <point key="canvasLocation" x="-15" y="972"/>
         </scene>
     </scenes>
     <resources>
