--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
     </dependencies>
@@ -643,13 +643,14 @@
                 </application>
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="AppstoreReviews" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController id="9Su-6Y-XzG"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
+                <windowController storyboardIdentifier="SettingsWindowsController" id="B8D-0N-5wS" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -661,13 +662,18 @@
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="86x-iU-Nv1" customClass="AppDelegate" customModule="AppstoreReviews" customModuleProvider="target">
+                    <connections>
+                        <outlet property="settingsWindowController" destination="B8D-0N-5wS" id="WFO-gw-7Uh"/>
+                    </connections>
+                </customObject>
             </objects>
             <point key="canvasLocation" x="-326" y="106"/>
         </scene>
         <!--Review View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ReviewViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ReviewViewController" id="XfG-lQ-9wD" customClass="ReviewViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -679,13 +685,13 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="80" headerView="eX8-pU-nlO" viewBased="YES" id="9mP-dQ-umL">
-                                            <rect key="frame" x="0.0" y="0.0" width="603" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="598" height="0.0"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="590" minWidth="40" maxWidth="1000" id="4UH-Ro-LmK">
+                                                <tableColumn width="595" minWidth="40" maxWidth="1000" id="4UH-Ro-LmK">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -893,6 +899,24 @@
             </objects>
             <point key="canvasLocation" x="-238" y="1111"/>
         </scene>
+        <!--Window Controller-->
+        <scene sceneID="p6V-mE-HDQ">
+            <objects>
+                <windowController storyboardIdentifier="ReviewWindowsController" id="E8W-Gv-fjB" sceneMemberID="viewController">
+                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="pOK-I8-SBO">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+                        <rect key="contentRect" x="163" y="208" width="480" height="270"/>
+                        <rect key="screenRect" x="0.0" y="0.0" width="1280" height="800"/>
+                    </window>
+                    <connections>
+                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="9CX-yt-jaK"/>
+                    </connections>
+                </windowController>
+                <customObject id="9pG-Lf-0kW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="523" y="830"/>
+        </scene>
         <!--Appearance-->
         <scene sceneID="2lQ-gX-Ejl">
             <objects>
@@ -1021,12 +1045,12 @@
                                                 </tableColumn>
                                             </tableColumns>
                                             <connections>
-                                                <binding destination="3uf-4a-TMD" name="content" keyPath="arrangedObjects" id="4Kl-Aq-qqw"/>
                                                 <binding destination="3uf-4a-TMD" name="doubleClickArgument" keyPath="arrangedObjects" id="1nU-Bf-tlY">
                                                     <dictionary key="options">
                                                         <string key="NSSelectorName">cellDoubleClicked:</string>
                                                     </dictionary>
                                                 </binding>
+                                                <binding destination="3uf-4a-TMD" name="content" keyPath="arrangedObjects" id="4Kl-Aq-qqw"/>
                                                 <binding destination="tJy-Yh-9gh" name="doubleClickTarget" keyPath="self" previousBinding="1nU-Bf-tlY" id="aXt-Ey-hhr">
                                                     <dictionary key="options">
                                                         <string key="NSSelectorName">cellDoubleClicked:</string>
@@ -1080,17 +1104,17 @@
                                             <string key="NSSelectorName">removeButtonClicked:</string>
                                         </dictionary>
                                     </binding>
+                                    <binding destination="tJy-Yh-9gh" name="target" keyPath="self" previousBinding="aEo-MI-pR4" id="l7Z-ZP-PP9">
+                                        <dictionary key="options">
+                                            <string key="NSSelectorName">removeButtonClicked:</string>
+                                        </dictionary>
+                                    </binding>
                                     <binding destination="tJy-Yh-9gh" name="enabled" keyPath="self.tableView.selectedRow" id="mvh-Jr-qpc">
                                         <dictionary key="options">
                                             <integer key="NSMultipleValuesPlaceholder" value="1"/>
                                             <integer key="NSNoSelectionPlaceholder" value="0"/>
                                             <integer key="NSNotApplicablePlaceholder" value="0"/>
                                             <integer key="NSNullPlaceholder" value="0"/>
-                                        </dictionary>
-                                    </binding>
-                                    <binding destination="tJy-Yh-9gh" name="target" keyPath="self" previousBinding="aEo-MI-pR4" id="l7Z-ZP-PP9">
-                                        <dictionary key="options">
-                                            <string key="NSSelectorName">removeButtonClicked:</string>
                                         </dictionary>
                                     </binding>
                                 </connections>
@@ -1153,7 +1177,7 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="50" headerView="yLf-IT-DH8" viewBased="YES" id="b8g-nn-vnu">
-                                            <rect key="frame" x="0.0" y="0.0" width="243" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="248" height="0.0"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1275,4 +1299,7 @@
     <resources>
         <image name="NSActionTemplate" width="14" height="14"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="9CX-yt-jaK"/>
+    </inferredMetricsTieBreakers>
 </document>
